AyaMagazine 1.0.3, 2018-05-12
------------------------
- update screenshot
- changing slider images
- fix issue with posts date format

AyaMagazine 1.0.1, 2018-04-05
------------------------
- update screenshot

AyaMagazine 1.0.1, 2018-03-27
------------------------
- remove unnecessary escape of get_search_query()

AyaMagazine 1.0.0, 2018-01-23
------------------------
- Initial release