@@ -4,7 +4,7 @@ Description: AyaMagazine is Fully Responsive Magazine WordPress Theme perfect fo
 Author: ayatemplates
 Author URI: https://ayatemplates.com
 Theme URI: https://ayatemplates.com/product/ayamagazine
-Version: 1.0.3
+Version: 1.0.4
 Text Domain: ayamagazine
 Tags: blog, news, three-columns, right-sidebar, custom-logo, custom-background, custom-header, custom-menu, featured-images, threaded-comments, translation-ready, sticky-post, theme-options, footer-widgets
 License: GNU General Public License v2.0
@@ -1568,6 +1568,10 @@ dt.gallery-icon > a:before,
 	.comment-form-url  {
 		width:150px;
 		float:left;
+	}
+
+	.comment-form-cookies-consent {
+		clear:both;
 	}
 
 	.form-submit {
