@@ -1,3 +1,7 @@
+AyaMagazine 1.0.4, 2018-08-04
+------------------------
+- remove default demo content
+
 AyaMagazine 1.0.3, 2018-05-12
 ------------------------
 - update screenshot
